# OpenCV-prototypes

./: pyproject.toml  readme.md  requirements.txt  run_demo.sh
dashboard/app/: globals.css  page.tsx
demos/: text_enhance.py
src/vademos/: cli.py  server.py
src/vademos/io/: capture.py
src/vademos/ops/: filters.py
